# linear-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  fmt.yml
src/: issues_query.rs  main.rs  queries.rs  schema.json
src/queries/: issues_query.graphql
